syntax = "proto3";

package user_service.service.v1;

option go_package = "github.com/github.com/MorselShogiew/UsersManager/grpc-contracts/gen/go/user_service/service/v1;proto_user_service";

import "google/api/annotations.proto";
import "user_service/model/v1/user.proto";

service UserService {

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create-user"
      body: "*"
    };
  }

  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
    option (google.api.http) = {
      get: "/v1/get-users"
    };
  }

  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
    option (google.api.http) = {
      patch: "/v1/delete-user/{id}"
      body: "*"
    };
  }
}
message CreateUserRequest {
  optional string name = 1; // mapped to query URL parameters ?name=""
  optional uint32 age = 2; // mapped to query URL parameters ?age=""
  optional string email = 3; // mapped to query URL parameters ?email=""
}

message CreateUserResponse {
  model.v1.User user = 1;
}
message DeleteUserRequest {
  optional string name = 1; // mapped to query URL parameters ?name=""
  optional uint32 age = 2; // mapped to query URL parameters ?age=""
  optional string email = 3; // mapped to query URL parameters ?email=""
}

message DeleteUserResponse {
}
message GetUsersRequest {
}

message GetUsersResponse {
  repeated model.v1.User users = 1;
}

